[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rentahuman"
version = "0.2.0"
description = "Python SDK + framework integrations for rentahuman.ai — the meatspace layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alex Kwon"}
]
keywords = ["rentahuman", "mcp", "langchain", "crewai", "ai-agents", "human-in-the-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.41.0"]
autogen = ["autogen-agentchat>=0.4.0"]
semantic-kernel = ["semantic-kernel>=1.0.0"]
async = ["httpx>=0.27.0"]
all = ["rentahuman[langchain,crewai,autogen,semantic-kernel,async]"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "responses>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/collapseindex/rentahuman-py"
Documentation = "https://github.com/collapseindex/rentahuman-py#readme"
Repository = "https://github.com/collapseindex/rentahuman-py"
Issues = "https://github.com/collapseindex/rentahuman-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
